--- a/app/src/main/res/layout/two_card_widget.xml
+++ b/app/src/main/res/layout/two_card_widget.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:paddingStart="22dp"
+    android:paddingEnd="22dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp" >
 
-    <include layout="@layout/card_1_layout" />
-    <include layout="@layout/card_1_layout" />
+    <include
+        layout="@layout/card_1_layout"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"/>
+
+    <include
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_marginStart="8dp"
+        android:layout_height="wrap_content"
+        layout="@layout/card_1_layout" />
 
 </LinearLayout>
