--- a/app/src/main/res/layout/card_1_layout.xml
+++ b/app/src/main/res/layout/card_1_layout.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/document"/>
 
 
@@ -21,10 +23,14 @@
         android:id="@+id/tv_card1_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Upload your prescription"
+        android:text="Upload your prescription"
         app:layout_constraintTop_toTopOf="@id/iv_card1_ic"
         app:layout_constraintLeft_toRightOf="@id/iv_card1_ic"
-        android:layout_marginStart="15dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="10dp"
+        android:textSize="10sp"
+        android:textColor="#000000"
+        android:layout_marginEnd="16dp"
         android:singleLine="true"
         />
 
@@ -32,8 +38,9 @@
         android:id="@+id/tv_card1_title_sub_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Upload your prescription"
-        android:lines="2"
+        android:text="Upload your prescription"
+        android:textSize="8sp"
+        android:textColor="#000000"
         app:layout_constraintTop_toBottomOf="@id/tv_card1_title_text"
         app:layout_constraintLeft_toLeftOf="@id/tv_card1_title_text" />
 
