--- a/app/src/main/res/layout/n_large_layout.xml
+++ b/app/src/main/res/layout/n_large_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <View
         android:id="@+id/n_large_layout_v1"
@@ -35,7 +35,7 @@
         android:textColor="@color/black"
         android:layout_marginTop="92dp"
         android:text="heart"
-        app:layout_constraintBottom_toBottomOf="@+/n_large_layout_v1"
+        app:layout_constraintBottom_toBottomOf="@+id/n_large_layout_v1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@id/n_large_layout_v1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
