--- a/app/src/main/res/layout/n_medium_widgets_recycler.xml
+++ b/app/src/main/res/layout/n_medium_widgets_recycler.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,21 +13,21 @@
         android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:text="@string/lab_tests_b"
+        android:text="@string/recently_se"
         android:textSize="14dp"
-        android:textAppearance="@style/lab_tests_b"
+        android:textAppearance="@style/recently_se"
         android:gravity="top"
         />
 
   <androidx.recyclerview.widget.RecyclerView
-      android:layout_width="96dp"
+      android:layout_width="98dp"
       android:layout_marginTop="10dp"
       android:layout_marginLeft="22dp"
       app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-      android:layout_height="113dp"
+      android:layout_height="134dp"
       app:layout_constraintTop_toBottomOf="@+id/large_widget_tv1"
       app:layout_constraintLeft_toLeftOf="parent"
-      android:background="@drawable/rectangle_7"
+      android:background="@drawable/rectangle_5"
       android:scrollbars = "horizontal"
       android:elevation="3dp"/>
 
