--- a/app/src/main/res/layout/n_small_widgets_recycler.xml
+++ b/app/src/main/res/layout/n_small_widgets_recycler.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <TextView
-        android:id="@+id/large_widget_tv1"
+        android:id="@+id/medium_widget_tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="22dp"
-        android:layout_marginTop="30dp"
-       app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:text="@string/lab_tests_b"
-        android:textSize="14dp"
-        android:textAppearance="@style/lab_tests_b"
+        android:text="@string/shop_by_cat"
+        android:layout_marginLeft="22dp"
+        android:textAppearance="@style/shop_by_cat"
         android:gravity="top"
         />
 
   <androidx.recyclerview.widget.RecyclerView
-      android:layout_width="96dp"
+      android:layout_width="58dp"
       android:layout_marginTop="10dp"
       android:layout_marginLeft="22dp"
       app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-      android:layout_height="113dp"
-      app:layout_constraintTop_toBottomOf="@+id/large_widget_tv1"
+      android:layout_height="58dp"
+      app:layout_constraintTop_toBottomOf="@+id/medium_widget_tv1"
       app:layout_constraintLeft_toLeftOf="parent"
       android:background="@drawable/rectangle_7"
       android:scrollbars = "horizontal"
