Added the Data Binding Code and Correected Few Layouts

--- a/app/src/main/res/layout/crousel_3.xml
+++ b/app/src/main/res/layout/crousel_3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.synnapps.carouselview.CarouselView
+    <ImageView
         android:id="@+id/carouselView"
         android:layout_width="match_parent"
         android:layout_height="152dp"
