--- a/app/src/main/res/layout/card_1_layout.xml
+++ b/app/src/main/res/layout/card_1_layout.xml
@@ -1,58 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/rectangle_2">
 
+<layout>
 
-    <ImageView
-        android:id="@+id/iv_card1_ic"
+    <data>
+        <variable
+            name="card"
+            type="com.rawtooth.medicineapp.models.Card1DetailClass" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/document"/>
+        android:background="@drawable/rectangle_2">
 
 
-    <TextView
-        android:id="@+id/tv_card1_title_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Upload your prescription"
-        app:layout_constraintTop_toTopOf="@id/iv_card1_ic"
-        app:layout_constraintLeft_toRightOf="@id/iv_card1_ic"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="10dp"
-        android:textSize="10sp"
-        android:textColor="#000000"
-        android:layout_marginEnd="16dp"
-        android:singleLine="true"
-        />
-
-    <TextView
-        android:id="@+id/tv_card1_title_sub_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Upload your prescription"
-        android:textSize="8sp"
-        android:textColor="#000000"
-        app:layout_constraintTop_toBottomOf="@id/tv_card1_title_text"
-        app:layout_constraintLeft_toLeftOf="@id/tv_card1_title_text" />
+        <ImageView
+            android:id="@+id/iv_card1_ic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/document"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_card1_title_sub_text"
-        android:layout_margin="8dp"
-        android:src="@drawable/green_small_circle"/>
+        <TextView
+            android:id="@+id/tv_card1_title_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="4dp"
+            android:singleLine="true"
+            android:text="@{card.title}"
+            android:textColor="#000000"
+            android:textSize="8sp"
+            app:layout_constraintLeft_toRightOf="@id/iv_card1_ic"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/iv_card1_ic"
+            tools:text="Upload your prescription kajdskjasdhkjasdhkajsdhaksjdhasdladsalskdkasldkasldkaslkdjaskldjaslkdjaslkdjaslkjdaslkdjal" />
+
+        <TextView
+            android:id="@+id/tv_card1_title_sub_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:textColor="#000000"
+            android:textSize="8sp"
+            android:text="@{card.subTitle}"
+            app:layout_constraintLeft_toLeftOf="@id/tv_card1_title_text"
+            app:layout_constraintTop_toBottomOf="@id/tv_card1_title_text"
+            tools:text="Upload your prescription" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:src="@drawable/green_small_circle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_card1_title_sub_text" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
