--- a/app/src/main/res/drawable/rectangle_6.xml
+++ b/app/src/main/res/drawable/rectangle_6.xml
@@ -2,21 +2,21 @@
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="50dp"
-    android:height="50dp"
-    android:viewportWidth="50"
-    android:viewportHeight="50"
+    android:width="360dp"
+    android:height="49dp"
+    android:viewportWidth="360"
+    android:viewportHeight="49"
     >
 
     <group>
 
         <clip-path
-            android:pathData="M0 0H50V50H0V0Z"
+            android:pathData="M0 0H360V49H0V0Z"
             />
 
         <path
-            android:pathData="M0 0V50H50V0"
-            android:fillColor="#B65CF1"
+            android:pathData="M0 0V49H360V0"
+            android:fillColor="#E5E5E5"
             />
 
     </group>
