--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -15,5 +15,5 @@
     <item
         android:id="@+id/person"
         android:icon="@drawable/ic_person"
-        android:title="person"/>
+        android:title="User"/>
 </menu>
