--- a/app/src/main/res/layout/n_large_layout.xml
+++ b/app/src/main/res/layout/n_large_layout.xml
@@ -13,7 +13,7 @@
         android:elevation="3dp"
         />
 
-    <View
+    <ImageView
         android:id="@+id/n_large_layout_v2"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -30,12 +30,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="7dp"
-        android:gravity="top"
-        android:textColor="@color/black"
-        android:layout_marginTop="92dp"
         android:text="heart"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/n_large_layout_v1"
+        app:layout_constraintEnd_toEndOf="@+id/n_large_layout_v1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/n_large_layout_v1" />
+        app:layout_constraintTop_toBottomOf="@id/n_large_layout_v2"
+       />
 </androidx.constraintlayout.widget.ConstraintLayout>
