--- a/app/src/main/res/layout/n_medium_widgets_recycler.xml
+++ b/app/src/main/res/layout/n_medium_widgets_recycler.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:text="@string/recently_se"
+        android:text="Recently searched"
         android:textSize="14dp"
         android:textAppearance="@style/recently_se"
         android:gravity="top"
