--- a/app/src/main/res/layout/single_screen.xml
+++ b/app/src/main/res/layout/single_screen.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="65dp"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <View
         android:id="@+id/single_screen_v1"
         android:layout_width="316dp"
         android:layout_height="90dp"
-        android:layout_marginLeft="22dp"
-        android:layout_marginRight="22dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="48dp"
+        android:background="@drawable/member_3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:background="@drawable/rectangle_3"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/single_screen_tv1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@id/single_screen_v1"
+        app:layout_constraintLeft_toLeftOf="@id/single_screen_v1"
         android:text="Become a member!"
         android:layout_marginLeft="21dp"
+        android:textColor="#000000"
         android:layout_marginTop="14dp"
         android:layout_marginBottom="60dp"
         android:fontFamily="@font/robotoregular"
@@ -31,14 +37,39 @@
         android:id="@+id/single_screen_tv2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@id/single_screen_v1"
+        app:layout_constraintLeft_toLeftOf="@id/single_screen_v1"
         android:text="Save flat 10% extra on medicines and \n enjoy FREE delivery"
         android:layout_marginLeft="21dp"
+        android:textColor="#000000"
         android:layout_marginTop="38dp"
         android:layout_marginBottom="28dp"
         android:fontFamily="@font/robotoregular"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/smiling_women"
+        app:layout_constraintEnd_toEndOf="@id/single_screen_v1"
+        app:layout_constraintTop_toTopOf="@id/single_screen_v1"
+        android:layout_marginEnd="18dp"
+        android:layout_marginTop="6dp"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/star1"
+        app:layout_constraintEnd_toEndOf="@id/single_screen_v1"
+        app:layout_constraintTop_toTopOf="@id/single_screen_v1"
+        android:layout_marginEnd="71dp"
+        android:layout_marginTop="6dp"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/star2"
+        app:layout_constraintEnd_toEndOf="@id/single_screen_v1"
+        app:layout_constraintTop_toTopOf="@id/single_screen_v1"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="33dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
