--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,14 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.user">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+  <com.google.android.material.appbar.MaterialToolbar
+      android:id="@+id/toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@drawable/rectangle_6"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:title="   Profile"/>
+  <ImageView
+      android:id="@+id/user_iv1"
+      android:layout_width="81dp"
+      android:layout_height="81dp"
+    android:src="@drawable/img3"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/toolbar"
+    android:layout_marginTop="31dp"
+    android:layout_marginStart="22dp"/>
+  <TextView
+      android:id="@+id/user_tv1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+    app:layout_constraintStart_toStartOf="parent"
+    android:layout_marginStart="134dp"
+    android:layout_marginTop="94dp"
+      app:layout_constraintTop_toTopOf="parent"
+    android:text="Sony Kapoor"
+    android:textSize="12sp"
+    android:textColor="@color/black"/>
+  <ImageView
+      android:id="@+id/user_iv2"
+      android:layout_width="15dp"
+      android:layout_height="15dp"
+     app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginEnd="22dp"
+      android:layout_marginTop="152dp"
+      app:layout_constraintTop_toTopOf="parent"
+      android:textSize="12sp"
+      android:src="@drawable/vector3"
+      android:textColor="@color/black"/>
+  <LinearLayout
+      android:layout_marginTop="241dp"
+      android:layout_marginBottom="55dp"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <Button
+        android:textAllCaps="false"
+        android:id="@+id/user_order"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+      android:text="Order"
+     android:paddingStart="18sp"
+        android:gravity="start|center"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+      android:textSize="12sp"
+      android:textColor="@color/black"
+      android:background="@drawable/rectangle_2"/>
+    <Button
+        android:textAllCaps="false"
+        android:id="@+id/user_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Manage Address"
+        android:paddingStart="18sp"
+        android:gravity="start|center"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:background="@drawable/rectangle_2"/>
+    <Button
+        android:textAllCaps="false"
+        android:id="@+id/user_prescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Prescription"
+        android:paddingStart="18sp"
+        android:gravity="start|center"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:background="@drawable/rectangle_2"/>
+    <Button
+        android:textAllCaps="false"
+        android:id="@+id/user_coupons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Coupons"
+        android:paddingStart="18sp"
+        android:gravity="start|center"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:background="@drawable/rectangle_2"/>
+    <Button
+        android:textAllCaps="false"
+        android:id="@+id/user_medicine_reminder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Medicine Reminder"
+        android:paddingStart="18sp"
+        android:gravity="start|center"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:background="@drawable/rectangle_2"/>
+    <Button
+        android:textAllCaps="false"
+        android:id="@+id/user_lab_reports"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Upload Lab reports"
+        android:paddingStart="18sp"
+        android:gravity="start|center"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:background="@drawable/rectangle_2"/>
+    <Button
+        android:textAllCaps="false"
+        android:id="@+id/user_support"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Support"
+        android:paddingStart="18sp"
+        android:gravity="start|center"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:background="@drawable/rectangle_2"/>
+    <Button
+        android:textAllCaps="false"
+        android:id="@+id/user_logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Log Out"
+        android:paddingStart="18sp"
+        android:gravity="start|center"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:background="@drawable/rectangle_2"/>
+
+  </LinearLayout>
+
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
