--- a/app/src/main/res/layout/activity_doctor_consult.xml
+++ b/app/src/main/res/layout/activity_doctor_consult.xml
@@ -4,23 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.users.user_reminder">
+    tools:context=".consult.doctor_consult">
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:title="  Consult Doctors"
         android:background="@drawable/rectangle_6"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:title="   Medicine Reminder"/>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/newTask"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <View
+        android:id="@+id/consult_v1"
+        android:layout_width="match_parent"
+        android:layout_height="139dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:background="@drawable/rectangle_7"
+        android:elevation="3dp"
+        />
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-      app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="22dp"
-        android:layout_marginBottom="32dp"
-        android:src="@drawable/ic_baseline_add_24" />
-
+        android:scaleType="fitXY"
+        android:src="@drawable/doctor_consult_img"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toTopOf="@id/consult_v1"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
