--- a/app/src/main/res/layout/activity_user_order.xml
+++ b/app/src/main/res/layout/activity_user_order.xml
@@ -13,6 +13,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:title="   Orders"/>
+
+    <View
+        android:id="@+id/ellipse_15"
+        android:layout_width="281dp"
+        android:layout_height="281dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/circle_img"
+        android:layout_marginTop="-106dp"
+         />
+
     <View
         android:id="@+id/user_order_v1"
         android:layout_width="wrap_content"
@@ -86,7 +97,7 @@
         android:gravity="top"
         android:fontFamily="@font/robotoregular"
         android:textSize="8sp"
-        android:textColor=" #73D686"
+        android:textColor="#1C9634"
         android:lineSpacingExtra="0sp"
         android:text="Track"
         app:layout_constraintStart_toStartOf="@id/user_order_v1"
